--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
 title: Rebekah Adams and Jack Rummler # your name (or website title) here
 logo: "/images/flex_logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  MUSA 508 
-  <br><br>
-  Final Project
+  MUSA 508 Final Project
   <br><br>
   <a href="https://www.youtube.com/watch?v=vrF7Rini-4M">Watch our presentation on You Tube</a> 
   
